--- a/my-app/index.html
+++ b/my-app/index.html
@@ -5,7 +5,24 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Oasis - Parent Portal</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html,
+    body,
+    #root {
+      width: 100%;
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+    }
+  </style>
+  <title>Oasis JEE Classes</title>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 
